[project]
name = "aie-bootcamp-july-2025-week-3-adv-rag-and-agents"
version = "0.1.0"
description = "Advanced RAG and Agentic AI - Dependency Scanner and Vulnerability Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0.0",
    "langchain>=0.1.17",
    "langchain-openai>=0.1.7",
    "langchain-community>=0.0.38",
    "langchain-core>=0.1.52",
    "openai>=1.3.7",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
    "requests>=2.31.0",
    "pathlib2>=2.3.0; python_version < '3.4'",
    "typing-extensions>=4.0.0",
    "rich>=13.7.0",
    "httpx>=0.25.2",
    "semver>=3.0.0",
    "pylint>=3.3.7",
]
